@@ -417,7 +417,7 @@ noscan  = text:xml:graphics:compressed
 #module  = bat.ranking
 #method  = searchGeneric
 #xmloutput = xmlprettyprint
-#envvars = BAT_SQLITE_AVG_C=/home/armijn/master2/avg:BAT_SQLITE_STRINGSCACHE_C=/home/armijn/master2/stringscache:BAT_SQLITE_DB=/home/armijn/master2/master:BAT_RANKING_FULLCACHE=1:BAT_RANKING_VERSION=1
+#envvars = BAT_SQLITE_AVG_C=/home/armijn/master2/avg:BAT_SQLITE_STRINGSCACHE_C=/home/armijn/master2/stringscache:BAT_SQLITE_DB=/home/armijn/master2/master:BAT_RANKING_FULLCACHE=1:BAT_RANKING_VERSION=1:BAT_RANKING_LICENSE=1
 #noscan  = text:xml:graphics:pdf:compressed
 
 [redboot]
